extended email with recievedAt timestamp
